<resources>
    <string name="app_name">Help me Shop</string>
    <string name="action_login">Einloggen</string>
    <string name="email">Email</string>
    <string name="pw">Password</string>
    <string name="action_forgot_pw">Passwort vergessen?</string>
    <string name="action_register">Jetzt registrieren</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</string>
    <string name="subtitle">Für Ihren Einkauf wird gesorgt!</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Passwort</string>
    <string name="action_show_guide">Wie funktioniert die App?</string>
    <string name="register_cat_credentials">Anmeldedaten</string>
    <string name="hint_password_confirm">Passwort bestätigen</string>
    <string name="register_cat_contact">Kontaktdaten</string>
    <string name="hint_lastname">Nachname</string>
    <string name="hint_firstname">Vorname</string>
    <string name="hint_address">Adresse</string>
    <string name="hint_phone_num">Telefonnummer</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiZmx1ZmZpc3RhciIsImEiOiJja2xlOXlldjYxN2NsMndzNHVmYnJ6c3FiIn0.cDTBeabBm8pzaUTvcNKfaA</string>
    <string name="user_location_permission_not_granted">No Permission for location</string>
    <string name="user_location_permission_explanation">To get yout Location</string>
    <string name="NavBarShopping">Enkauf</string>
    <string name="NavBarMap">Map</string>
    <string name="profile">Profile</string>
    <string name="ausloggen">Ausloggen</string>
    <string name="notification">Notification</string>




    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Information</string>
    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <!-- [START fcm_default_icon_string] -->
    <string name="default_notification_channel_name" translatable="true">Help Me Shop</string>
    <!-- [END fcm_default_icon_string] -->
    <string name="msg_subscribe_failed">Failed to get Message</string>
    <string name="fcm_message">FCM Message</string>
    <string name="hint_postal_code">PLZ</string>
    <string name="hint_city">Stadt</string>
    <string name="picture_change_ask">Wollen Sie ein neues Bild machen\noder ein Bild aus der Gallery?</string>
    <string name="abbruch">Abbruch</string>
    <string name="kamera">Kamera</string>
    <string name="gallery">Gallery</string>
</resources>