<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginHorizontal="30sp">

        <TextView
            android:id="@+id/login_txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/app_name"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/login_txt_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_txt_title"
            android:layout_marginTop="10sp"
            android:text="@string/subtitle"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_txt_input_email"
            app:errorEnabled="true"
            android:layout_below="@+id/login_txt_subtitle"
            android:layout_marginTop="35sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_txt_input_pw"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            android:layout_below="@+id/login_txt_input_email"
            android:layout_marginTop="5sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_txt_forgot_pw"
            android:layout_marginTop="30sp"
            android:paddingVertical="15sp"
            android:text="@string/action_login" />

        <TextView
            android:id="@+id/login_txt_forgot_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/login_txt_input_pw"
            android:layout_marginTop="15sp"
            android:text="@string/action_forgot_pw"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/login_txt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_btn"
            android:layout_marginTop="30sp"
            android:layout_centerHorizontal="true"
            android:text="@string/action_register"
            android:textSize="16sp"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/login_txt_show_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40sp"
        android:layout_centerHorizontal="true"
        android:text="@string/action_show_guide"
        android:textSize="16sp"/>

</RelativeLayout>